# tt-inference-server

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  ADD_gemma4_31b_it_to_CI.md  AGENTS.md  CI_UMBRELLA_forge_tp_p300x2.md  CI_benchmark_runtime.md  CI_benchmarks_vllm_uplift.md  CI_initial_support.md  CI_issue1_initial_support.md  CI_issue2_benchmarks_vllm_uplift.md  CI_issue3_benchmark_runtime.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_SUMMARY_4521_scheduler_deadlock.md  DEMO_GUIDE.md  DEMO_README  Dockerfile.qwen36  Dockerfile.qwen36vl  Dockerfile.ttplugin  FINDINGS_qwen3_8b_b32_release_4131.md  FINDINGS_run_py_server_url_forge_smoke.md  FORGE_LLM_CI_PERF_EFFORT.md  FORGE_MODEL_INTEGRATION_GUIDE.md  GetApiKey  HANDOFF_conc32_device_read_stall.md  HANDOFF_gemma4_31b_it_forge.md  HANDOFF_largeisl_compile_investigation.md  IR_DIFF_server_vs_standalone.md  ISSUE_benchmarks_vllm_uplift.md  LICENSE  LICENSE_understanding.txt  NOTICE  PERF_gemma4_31b_it_forge.md  PR_2256_REVIEW_SUMMARY.md  QB2_P300_ETH_FABRIC_HANG_REPORT.md  QUICK_START.md  QWEN36_SERVING.md  (+60 more)
tt-media-server/: .env.test  .gitignore  BUILD_OPTIMIZATION.md  CLAUDE.md  Dockerfile  Dockerfile.blaze  Dockerfile.blaze.base  Dockerfile.forge  Dockerfile.gateway  Dockerfile.migration-worker  Dockerfile.migration_worker  Dockerfile.sfpi-minimal  Dockerfile.vllm-plugin  README.md  attack_qwen3_8b_lite.sh  attack_qwen3_8b_lite_loop.sh  audio-requirements.txt  client_demo.sh  client_demo_4prompts.sh  client_demo_concurrent.sh  docker-entrypoint.sh  dump_hang_gdb.sh  fix_dependencies.sh  install_requirements.sh  jobs.db  launch_falcon3_7b.sh  launch_falcon3_baseline.sh  launch_falcon3_bf16.sh  launch_gemma4_31b_it_ci.sh  launch_llama_3_1_8b_ci.sh  launch_llama_3b.sh  launch_llama_8b.sh  launch_mistral_small_31_24b.sh  launch_qwen3_32b_ci.sh  launch_qwen3_4b.sh  launch_qwen3_8b.sh  launch_qwen3_8b_ci.sh  launch_qwen3_8b_debug.sh  launch_server.sh  load_tester.py  (+23 more)
tt-media-server/config/: constants.py  kv_cache_settings.py  settings.py  vllm_settings.py
tt-media-server/cpp_server/: .clang-format  .clang-tidy  .clangd  .gitignore  .mcp.json  1  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEPLOYMENT.md  QWEN_RUNNER.md  README.md  TRACY.md  build.sh  build_blaze.sh  build_blaze_exabox.sh  build_exabox.sh  chat.sh  flamegraph-capture-offcpu.sh  flamegraph-capture.sh  format.sh  install_dependencies.sh  multiturn-chat.sh  run-prefill-mock-standalone.sh  run_blaze_exabox.sh  run_server.sh  start-decode.sh  start-prefill.sh  tidy-fix.sh  tidy.sh  tracy-capture.sh  tsan_suppressions.txt
tt-media-server/cpp_server_kosta/: CMakeLists.txt
tt-media-server/device_workers/: device_worker.py  device_worker_dynamic_batch.py  device_worker_slot.py  device_worker_video_shm.py  kv_cache_device_worker.py  worker_utils.py
tt-media-server/docs/: bfp4_weight_verification.md
tt-media-server/domain/: audio_processing_request.py  audio_text_response.py  audio_transcription_request.py  base_image_generate_request.py  base_image_request.py  base_request.py  chat_completion_request.py  completion_request.py  completion_response.py  detokenize_request.py  detokenize_response.py  embedding_response.py  image_edit_request.py  image_generate_request.py  image_search_request.py  image_search_response.py  image_to_image_request.py  lidar_detection_request.py  lidar_detection_response.py  lora_inference_request.py  sd35_image_generate_request.py  sdxl_image_generate_request.py  task_queue.py  text_completion_request.py  text_embedding_request.py  text_to_speech_request.py  text_to_speech_response.py  tokenize_request.py  tokenize_response.py  training_request.py  transcription_response.py  video_generate_request.py  video_i2v_generate_request.py
tt-media-server/health_monitoring/: canary_monitor.py  gas_monitor.py
tt-media-server/ipc/: video_shm.py  video_shm_bootstrap.py
tt-media-server/kv_cache/: README.md  __init__.py  fabric_setup.py  fabric_transfer.py  kv_cache_storage.py
tt-media-server/model_services/: audio_service.py  base_image_service.py  base_job_service.py  base_service.py  cnn_service.py  cpu_workload_handler.py  deque_queue.py  device_worker.py  device_worker_dynamic_batch.py  embedding_service.py  fast_fifo_queue.py  image_service.py  lidar_service.py  llm_service.py  memory_queue.py  process_queue_handler.py  request_coalescer.py  scheduler.py  sd35_image_service.py  sdxl_image_service.py  task_queue.py  text_to_speech_service.py  training_service.py  tt_faster_fifo_queue.py  tt_queue.py  tts_service.py  ultra_fast_queue.py  video_service.py
tt-media-server/monitoring/: README.md  docker-compose.yml  process-exporter.yml  prometheus.yml
tt-media-server/open_ai_api/: __init__.py  audio.py  chat.py  cnn.py  deprecation.py  edit_image.py  embedding.py  fine_tuning.py  generate_image.py  image.py  image_to_image.py  lidar.py  llm.py  models.py  text_to_image.py  text_to_speech.py  tokenizer.py  tt_maintenance_api.py  tts.py  video.py  websocket_stt.py
tt-media-server/performance/: perf_e2e_serving_summary.py  perf_sp_runner_mock_e2e.sh  snapshot_prometheus_metrics.sh
tt-media-server/performance_tests/: README.md  __init__.py  conftest.py  llm_streaming_client.py  streaming_client.py  streaming_metrics.py  test_audio_transcription.py  test_image_generation.py  test_llm_multiprocess_streaming.py  test_llm_streaming.py  test_structured_output_streaming.py  tpot_test.py
tt-media-server/prefill_gateway/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
tt-media-server/prefill_node/: distributed_tensor_socket_factory.py  distributed_tensor_sockets_utilities.py
tt-media-server/prefill_node_tests/: conftest.py  dual_n300_rank_bindings.yaml  multihost_n300_mesh_graph_descriptor.textproto  multihost_n300_rank_bindings.yaml  node_utils.py  test_distributed_tensor_socket_factory_integration.py  test_distributed_tensor_sockets_integration.py  (+2 more)
tt-vllm-plugin/: .gitignore  CHANGELOG.md  Dockerfile.overlay  README.md  online_benchmark.sh  pyproject.toml  serve.sh  setup.py
(+3771 files in other folders)
